[gd_scene load_steps=11 format=3 uid="uid://dtb1d3rcu5ows"]

[ext_resource type="Texture2D" uid="uid://dvqr8eh4lyl84" path="res://personagem/assets/caçador/CaçadorDeRecompensas.png" id="1_4426p"]
[ext_resource type="Script" path="res://scripts/caçador.gd" id="1_a8f3m"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_abwxu"]
size = Vector2(36.1434, 77.9704)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l33le"]
size = Vector2(26, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_q38sg"]
atlas = ExtResource("1_4426p")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gsbh5"]
atlas = ExtResource("1_4426p")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_crgt4"]
atlas = ExtResource("1_4426p")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_u0obn"]
atlas = ExtResource("1_4426p")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ts66u"]
atlas = ExtResource("1_4426p")
region = Rect2(256, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_o5ra6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q38sg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gsbh5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_crgt4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u0obn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ts66u")
}],
"loop": true,
"name": &"default",
"speed": 3.0
}]

[node name="caçador" type="StaticBody2D"]
script = ExtResource("1_a8f3m")
metadata/_edit_group_ = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-4.92831, 9.04774)
shape = SubResource("RectangleShape2D_abwxu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("RectangleShape2D_l33le")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_o5ra6")
autoplay = "default"
frame = 1
frame_progress = 0.154024

[node name="Button" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 1, 1, 0)
offset_left = -10.0
offset_top = -29.0
offset_right = 13.0
offset_bottom = 34.0

[connection signal="body_entered" from="Area2D" to="." method="_on_Caçador_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Caçador_body_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
